orchestrated animations & splash

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <!--
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#000000">
+  <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -19,14 +20,39 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body style="background: #F6FCFF">
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
-    <!--
+  <title>React App</title>
+</head>
+
+<body style="background: #F6FCFF">
+  <noscript>
+    You need to enable JavaScript to run this app.
+  </noscript>
+  <div id="root">
+    <div style="display: -ms-flexbox; display: flex; -ms-flex-pack: center; justify-content: center; -ms-flex-align: center; align-items: center; position: fixed; top: 0; right: 0; bottom: 0; left: 0; background: #f6fcff; opacity: 0.2;     -webkit-transform: scale(-1);
+    -ms-transform: scale(-1);
+    transform: scale(-1);">
+      <div style="position: relative;
+      width: 46px;
+      height: 46px;">
+        <div style="position: absolute; top: 0; right: 0; left: 0; bottom: 0;"><svg width="46px" height="46px" viewBox="0 0 46 46"
+            version="1.1">
+            <path d="M4.18181818,4.18181818 L4.18181818,41.8181818 L41.8181818,41.8181818 L41.8181818,4.18181818 L4.18181818,4.18181818 Z M2.09090909,0 L43.9090909,0 C45.0638681,0 46,0.936131887 46,2.09090909 L46,43.9090909 C46,45.0638681 45.0638681,46 43.9090909,46 L2.09090909,46 C0.936131887,46 0,45.0638681 0,43.9090909 L0,2.09090909 C0,0.936131887 0.936131887,0 2.09090909,0 Z"
+              fill="#183A4F"></path>
+          </svg></div>
+        <div style="position: absolute; top: 0; right: 0; left: 0; bottom: 0;"><svg width="46px" height="46px" viewBox="0 0 46 46"
+            version="1.1">
+            <path d="M30.3181818,15.6818182 L12.5454545,15.6818182 C11.3906773,15.6818182 10.4545455,14.7456863 10.4545455,13.5909091 C10.4545455,12.4361319 11.3906773,11.5 12.5454545,11.5 L32.4090909,11.5 C33.5638681,11.5 34.5,12.4361319 34.5,13.5909091 L34.5,33.4545455 C34.5,34.6093227 33.5638681,35.5454545 32.4090909,35.5454545 C31.2543137,35.5454545 30.3181818,34.6093227 30.3181818,33.4545455 L30.3181818,15.6818182 Z"
+              fill="#183A4F"></path>
+          </svg></div>
+        <div style="position: absolute; top: 0; right: 0; left: 0; bottom: 0;"><svg width="46px" height="46px" viewBox="0 0 46 46"
+            version="1.1">
+            <path d="M28.8396858,14.2033222 C29.6562366,13.3867714 30.980127,13.3867714 31.7966778,14.2033222 C32.6132286,15.019873 32.6132286,16.3437634 31.7966778,17.1603142 L14.0239505,34.9330415 C13.2073998,35.7495922 11.8835093,35.7495922 11.0669585,34.9330415 C10.2504078,34.1164907 10.2504078,32.7926002 11.0669585,31.9760495 L28.8396858,14.2033222 Z"
+              fill="#183A4F"></path>
+          </svg></div>
+      </div>
+    </div>
+  </div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -36,5 +62,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
